--- a/cms/templates/partials/metadata-tiles.html
+++ b/cms/templates/partials/metadata-tiles.html
@@ -94,14 +94,14 @@
       {% if certificate %}
       <li>
         <span class="title">CEUs</span>
-        <span class="text">{{ certificate.CEUs }}</span>
+        <span class="text">{{ certificate.CEUs|floatformat }}</span>
       </li>
       {% endif %}
       {% if page.product.current_price %}
       <li>
         <span class="title">PRICE</span>
         <span class="text"
-          >${{ page.product.current_price|floatformat:"0"|intcomma }}</span
+          >${{ page.product.current_price|floatformat:"2"|intcomma }}</span
         >
       </li>
       {% elif page.is_internal_or_external_course_page and page.product.first_unexpired_run.current_price %}
