--- a/cms/templates/partials/metadata-tiles.html
+++ b/cms/templates/partials/metadata-tiles.html
@@ -91,6 +91,12 @@
         <span class="title">FORMAT</span>
         <span class="text">{{ page.format }}</span>
       </li>
+      {% if ceus %}
+      <li>
+        <span class="title">CEUs</span>
+        <span class="text">{{ ceus|floatformat }}</span>
+      </li>
+      {% endif %}
       {% if page.product.current_price %}
       <li>
         <span class="title">PRICE</span>
