feat: display tax details for countries where taxes are enabled

--- a/mail/templates/product_order_receipt/body.html
+++ b/mail/templates/product_order_receipt/body.html
@@ -22,7 +22,7 @@
       Cambridge, MA 02139 USA
       <br />
       {% if enable_taxes_display %}
-      GSTIN: Pending
+      GSTIN: 9923USA29055OSB
       <br />
       {% endif %}
       Support:
