feat: move receipt signature to the bottom and hide web widget text

--- a/static/scss/receipt.scss
+++ b/static/scss/receipt.scss
@@ -261,11 +261,20 @@ $label-color: #8a8b8c;
     display: none !important;
   }
 
+  iframe[title="Message from company"],
+  iframe[title="Close message"] {
+    display: none !important;
+  }
+
   .receipt-wrapper {
     padding: 0 15px;
     font:
       500 16px/21px Rajdhani,
       "Times New Roman",
       serif;
+
+    .footnote-signature {
+      padding-top: 300px;
+    }
   }
 }
