--- a/static/scss/receipt.scss
+++ b/static/scss/receipt.scss
@@ -257,7 +257,8 @@ $label-color: #8a8b8c;
   .print-btn,
   .print-row,
   .footer,
-  .header-holder {
+  .header-holder,
+  .notifications {
     display: none !important;
   }
 
