fix: use support email address from configurations(settings)

--- a/mail/templates/product_order_receipt/body.html
+++ b/mail/templates/product_order_receipt/body.html
@@ -26,8 +26,8 @@
       <br />
       {% endif %}
       Support:
-      <a href="mailto:support@xpro.mit.edu">
-        support@xpro.mit.edu
+      <a href="mailto:{{ email_support }}">
+        {{ email_support }}
       </a>
       <br />
     </p>
