--- a/static/scss/catalog/tabs.scss
+++ b/static/scss/catalog/tabs.scss
@@ -103,3 +103,12 @@
     }
   }
 }
+
+.nav-tabs-container,
+.catalog-sort-by {
+  display: inline-block;
+}
+
+#sorting-select {
+  border: none;
+}
