more style updates

--- a/cms/templates/catalog_page.html
+++ b/cms/templates/catalog_page.html
@@ -126,7 +126,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="catalog-sort-by dropdown">
+              <div class="catalog-sort-by-dropdown dropdown">
                 <span>Sort By:</span>
                 <div
                   class="col-2 dropdown-toggle"
