--- a/static/scss/catalog/tabs.scss
+++ b/static/scss/catalog/tabs.scss
@@ -128,6 +128,7 @@
   padding: 10px;
   border: 2px solid transparent;
 
+  &.show,
   &:hover {
     border: 2px solid #b8c2cc;
     border-radius: 4px;
