--- a/static/scss/catalog/tabs.scss
+++ b/static/scss/catalog/tabs.scss
@@ -34,8 +34,12 @@
   position: relative;
 
   .container {
-    max-width: 880px;
+    min-width: 880px;
     padding-left: 0;
+
+    @media (width <= 1024px) {
+      min-width: unset;
+    }
   }
 
   h1 {
@@ -49,11 +53,13 @@
   }
 
   .nav-tabs {
-    border: none;
-    display: block;
-    letter-spacing: -0.32em;
-    position: relative;
-    margin-top: 35px;
+    display: flex;
+    justify-content: space-between;
+    list-style-type: none;
+    padding: 0;
+    width: 100%;
+    margin: 35px 0 0;
+    border-bottom: unset;
 
     @include media-breakpoint-down(sm) {
       margin-left: 15px;
@@ -66,29 +72,15 @@
       font-size: 24px;
       line-height: 30px;
       font-weight: 600;
-      position: relative;
       text-transform: uppercase;
       float: none;
       padding: 0 15px 0 0;
+      flex-grow: 1;
+      text-align: left;
+      margin: 0 5px;
 
       @include media-breakpoint-up(md) {
         font-size: 26px;
-      }
-
-      @media screen and (width >= 1550px) {
-        padding: 0 110px 0 0;
-      }
-
-      @media screen and (width <= 1550px) {
-        padding: 0 75px 0 0;
-      }
-
-      @media screen and (width <= 1200px) {
-        padding: 0 40px 0 0;
-      }
-
-      @media screen and (width <= 500px) {
-        padding: 0 45px 0 0;
       }
 
       @include media-breakpoint-down(md) {
@@ -121,11 +113,27 @@
 
 .nav-tabs-container {
   display: inline-block;
+  flex-grow: 1;
+}
+
+.catalog-nav-head {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+  margin-top: 35px;
+
+  @include media-breakpoint-down(sm) {
+    display: block;
+  }
 }
 
 .catalog-sort-by-dropdown {
+  margin-left: 20px;
   display: inline-flex;
   padding: 10px;
+  white-space: nowrap;
+  margin-top: 25px;
   border: 2px solid transparent;
 
   &.show,
@@ -137,12 +145,10 @@
 
   @include media-breakpoint-down(md) {
     margin-left: 20px;
-    padding-left: 0;
   }
 
   @include media-breakpoint-down(sm) {
-    margin-left: 35px;
-    padding-left: 0;
+    margin-left: 23px;
   }
 
   .dropdown-toggle {
@@ -165,17 +171,21 @@
 
   .dropdown-menu {
     background-color: $white;
-    box-shadow: 0 2px 4px 0 rgb(0 0 0 / 50%);
-    border-color: $white-smoke;
-    border-radius: 5px;
+    box-shadow: 0 2px 4px 0 rgb(37 38 43 / 20%);
+    border-radius: 8px;
     right: 0;
     left: unset;
-    width: fit-content;
+    width: 100%;
+
+    &.show {
+      padding: 12px 0;
+    }
 
     .dropdown-item {
       color: #626a73;
       font-size: 18px;
       font-weight: 400;
+      padding: 8px 16px;
 
       &:hover {
         background-color: $white;
