fix: support email address from configurations(settings) on all templates

--- a/cms/templates/partials/faqs.html
+++ b/cms/templates/partials/faqs.html
@@ -5,7 +5,7 @@
       <h3>
         Please review the following frequently asked questions before enrolling.
         Don’t see your question here? Please contact our team at
-        <a href="mailto:mitxpro@mit.edu">mitxpro@mit.edu</a>.
+        <a href="mailto:{{ support_email }}">{{ support_email }}</a>.
       </h3>
     </div>
     <ul id="accordion">
