--- a/mail/templates/product_order_receipt/body.html
+++ b/mail/templates/product_order_receipt/body.html
@@ -26,8 +26,8 @@
       <br />
       {% endif %}
       Support:
-      <a href="mailto:{{ email_support }}">
-        {{ email_support }}
+      <a href="mailto:{{ support_email }}">
+        {{ support_email }}
       </a>
       <br />
     </p>
