--- a/mail/templates/welcome_course_run_enrollment/body.html
+++ b/mail/templates/welcome_course_run_enrollment/body.html
@@ -118,7 +118,7 @@
             Support Team is here to assist you. Feel free to check out the
             <a href="https://xpro.zendesk.com/hc/en-us">MIT xPRO Help Center</a>
             or reach out to us at
-            <a href="mailto:support@xpro.mit.edu">support@xpro.mit.edu</a>, and
+            <a href="mailto:{{ support_email }}">{{ support_email }}</a>, and
             we'll be happy to help.
           </p>
           <p style="margin: 0 0 10px">
