--- a/voucher/templates/redeemed.html
+++ b/voucher/templates/redeemed.html
@@ -17,7 +17,7 @@
     <p>
       MIT xPRO Customer Support
       <br />
-      <a href="mailto:xpro@mit.edu">xpro@mit.edu</a>
+      <a href="mailto:{{ support_email }}">{{ support_email }}</a>
     </p>
   </div>
 </div>
