--- a/static/scss/ecommerce-admin.scss
+++ b/static/scss/ecommerce-admin.scss
@@ -42,6 +42,9 @@
       display: block;
     }
 
+    textarea {
+      width: 100%;
+    }
     select {
       display: block;
       width: 187px;
@@ -77,5 +80,10 @@
     background-color: #ef5350;
     color: #fff;
     padding: 15px;
+  }
+
+  .small-text {
+    font-size: 14px;
+    color: rgb(76, 76, 5);
   }
 }
