--- a/static/scss/ecommerce-admin.scss
+++ b/static/scss/ecommerce-admin.scss
@@ -45,6 +45,7 @@
     textarea {
       width: 100%;
     }
+    
     select {
       display: block;
       width: 187px;
@@ -84,6 +85,6 @@
 
   .small-text {
     font-size: 14px;
-    color: rgb(76, 76, 5);
+    color: rgb(76 76 5);
   }
 }
