--- a/cms/templates/catalog_page.html
+++ b/cms/templates/catalog_page.html
@@ -126,6 +126,7 @@
                   </li>
                 </ul>
               </div>
+            {% if enable_catalog_filter %}
               <div
                 class="catalog-sort-by-dropdown dropdown"
                 id="catalogSortDropdown"
@@ -164,6 +165,8 @@
                   </div>
                 </div>
               </div>
+              {% endif %}
+            </div>
               <div class="tab-content">
                 {% if featured_product.program %}
                 {% include "partials/featured_card.html" with courseware_page=featured_product object_type="program" %}
