fix: renamed to enable_catalog_sorting

--- a/cms/templates/catalog_page.html
+++ b/cms/templates/catalog_page.html
@@ -126,7 +126,7 @@
                   </li>
                 </ul>
               </div>
-              {% if enable_catalog_filter %}
+              {% if enable_catalog_sorting %}
               <div
                 class="catalog-sort-by-dropdown dropdown"
                 id="catalogSortDropdown"
