feat: add catalog filter feature flag (#3167)
* feat: add catalog filter feature flag

* fix: fmt issues

* fix: some issues

* fix: renamed to enable_catalog_sorting

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

---------

Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/cms/templates/catalog_page.html
+++ b/cms/templates/catalog_page.html
@@ -126,6 +126,7 @@
                   </li>
                 </ul>
               </div>
+              {% if enable_catalog_sorting %}
               <div
                 class="catalog-sort-by-dropdown dropdown"
                 id="catalogSortDropdown"
@@ -163,6 +164,7 @@
                     {% endfor %}
                   </div>
                 </div>
+                {% endif %}
               </div>
               <div class="tab-content">
                 {% if featured_product.program %}
