feat: enabled access control restrictions

--- a/mitxpro/templates/index.html
+++ b/mitxpro/templates/index.html
@@ -5,5 +5,8 @@
 
 {% block content %}
 <div id="container"></div>
+<script>
+    var USER_PERMISSIONS = {{user_permissions|safe}};
+</script>
 {% render_bundle 'root' %}
 {% endblock %}
