--- a/static/scss/variables.scss
+++ b/static/scss/variables.scss
@@ -34,3 +34,4 @@ $alice-blue: #f4f6f7;
 $close-hover-background: #f9f2f3;
 $hs-form-field-border: #ced4da;
 $hs-form-field-label: #495057;
+$warning-background: #ef5350;
