feat: add coupons deactivate form (#3160)
* feat: add coupons deactivate form

* tests: added tests and some cleanups

* fix: ruff issues

* fix: typo

* fix: issues

* fix: small issue

* fix: test

* fix:pre-commit errors

* fix: pre-commit errors

* feat: added confirmation modal

* feat: added code to log history in CouponModel on coupon deactivation

* fix: issues

* fix: fmt issues

* fix: tests

* fix: issues

* fix: tests

* fix: issues

* fix: issues

* fix: issues

* fix: issues

* fix: issues

* fix: issues

* feat: enabled access control restrictions

* fix: added and fixed tests and other errors

* fix: ruff, flow errors

* fix: pre-commit errors

* fix: test

* fix: some cleanup

* fix: included example in the note

* fix: some issues

* fix: test

* fix: some changes in utils

* fix: issues

* fix: fmt issues

* fix:test

* fix: ecommerce admin view docstring

* fix: issue

--- a/mitxpro/templates/index.html
+++ b/mitxpro/templates/index.html
@@ -7,3 +7,10 @@
 <div id="container"></div>
 {% render_bundle 'root' %}
 {% endblock %}
+
+{% block scripts %}
+{{ block.super }}
+<script>
+  var USER_PERMISSIONS = {{user_permissions|safe}};
+</script>
+{% endblock %}
