--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -48,7 +48,7 @@
   {% include "partials/hero.html" %}
   {% include "partials/metadata-tiles.html" %}
   {% include "partials/subnav.html" with product=page.product %}
-  {% if course_overview %}
+  {% if course_overview and course_overview.heading or course_overview.get_overview %}
   {% include "partials/course-overview.html" with page=course_overview %}
   {% endif %}
   {% if outcomes %}
