--- a/static/scss/layout.scss
+++ b/static/scss/layout.scss
@@ -34,6 +34,7 @@
 @import "detail/companies-trust";
 @import "detail/text-section";
 @import "detail/catalog-topics";
+@import "detail/course-overview";
 @import "ecommerce-admin";
 @import "resource";
 @import "notification";
