--- a/cms/templates/partials/subnav.html
+++ b/cms/templates/partials/subnav.html
@@ -13,7 +13,7 @@
   </a>
   <div id="subNavBar" class="collapse navbar-collapse justify-content-center">
     <ul class="navbar-nav container justify-content-center">
-      {% if course_overview %}
+      {% if course_overview and course_overview.heading or course_overview.get_overview %}
       <li class="nav-item px-2 d-flex align-items-center">
         <a class="nav-link text-center" href="#courseOverview">Overview</a>
       </li>
