--- a/cms/templates/certificate_page.html
+++ b/cms/templates/certificate_page.html
@@ -165,7 +165,7 @@
           <span class="award-text">
             {% if page.CEUs %}
             Awarded
-            {{ CEUs }}
+            {{ CEUs|floatformat }}
             Continuing Education Units (CEUs) <br />
             {% endif %}
 
